Thu Feb 28 03:08:42 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* get.c (Get_RHS): Remove one-character string support.  Already
	provided by Code_EvalLow.
	* m_cpu.c (m_movw_movt_mov32): Likewise.
	* directive_data.c (DefineInt): Likewise.
	* variables.c (Var_Define): Add assert on possible value types.
	* input.c (Input_VarSub): Tune comment.

	unittests/compare/core:
	* instr_movt_movw_mov32.s: Add one-character string test.
	* instr_adc_add_and_bic_eor_mov_mvn_orr_rsb_rsc_sbc_sub_cmn_cmp_teq_tst.s:
	Change a couple of immediate constants into an one-character string.

Mon Feb 25 23:35:05 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* lex.h (Lex::Data::String): Add owns entry.
	* lex.c (Lex_String): Add ownership parameter.
	(Lex_MakeReferringLocalLabel): Store local lex label name in symbol
	table.
	(Lex_DefineLocalLabel): Likewise.
	(Lex_GetBuiltinVariable): Follow Lex_String API change.
	(Lex_Print): Likewise.
	* lit.c (Lit_RegisterInt): Use Value_Copy instead of Value_Assign.
	(Lit_RegisterFloat): Likewise.
	* reloc.c: Likewise.
	* symbol.c: Likewise.
	* decode.c: Likewise.
	* variables.c (Var_Define): Use Value_String.  Empty strings can have
	NULL string pointer.
	* phase.c (Phase_PrepareFor): Add call to Code_PrepareForPhase.
	* directive_data.c: Add reloc.h header include.
	* m_cpumem.c: Likewise.
	* m_cpuctrl.c: Likewise.
	* eval.c (Eval_Binop): Pass result as Value return value.
	(Eval_Unop): Likewise.  Follow eOp_None rename to eOp_Pos.
	(Eval_NegValue): Merge into Eval_Unop.
	* eval.c (Eval_Binop): Add result Value parameter.
	(Eval_Upop): Likewise.
	* macros.h: Update comments.
	* input.c (Input_VarSub): Fix case of NULL string pointers.
	* directive_symbol.c (Define): Remove call to Value_Assign.
	* code.c (Code_PrepareForPhase): Add.
	(Code_FreeCode): Add.
	(Code_Position, Code_Storage): Remove.
	(Program, Stack): Add ownership to those structures.
	Deal with the fallout.
	(Code_TakeSnapShot): Remove.